# Raspcoptor

./: .gitignore  README.md
src/IMU/: CMakeLists.txt  demo_dmp.cpp  package.xml
src/IMU/include/: MPU6050_6Axis_MotionApps20.h
src/IMU/src/: imu.cpp
