<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<!--  TODO your package name -->
  <name>imu_node</name>
  <version>0.1.0</version>
  <description>Node publishing data from MPU 6050</description>
  <maintainer email="valentin@molina.pro">Valentin Molina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
<!--  list the required ROS 2 dependencies  -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
